syntax = "proto3";

package pinnacle.render.v1;

import "google/protobuf/empty.proto";

// The filtering method.
enum Filter {
  FILTER_UNSPECIFIED = 0;
  // Bilinear filtering.
  //
  // This will cause up- and downscaling to be blurry.
  FILTER_BILINEAR = 1;
  // Nearest neighbor filtering.
  //
  // This will cause edges to become pixelated when scaling.
  FILTER_NEAREST_NEIGHBOR = 2;
}

message SetUpscaleFilterRequest {
  // The filter that will be used.
  Filter filter = 1;
}

message SetDownscaleFilterRequest {
  // The filter that will be used.
  Filter filter = 1;
}

service RenderService {
  // Set the upscaling filter the renderer will use when upscaling buffers.
  rpc SetUpscaleFilter(SetUpscaleFilterRequest) returns (google.protobuf.Empty);
  // Set the downscaling filter the renderer will use when downscaling buffers.
  rpc SetDownscaleFilter(SetDownscaleFilterRequest) returns (google.protobuf.Empty);
}
