syntax = "proto3";

package pinnacle.window.v1;

import "google/protobuf/empty.proto";
import "pinnacle/util/v1/util.proto";

message GetRequest {}
message GetResponse {
  repeated uint32 window_ids = 1;
}

// Window properties

message GetAppIdRequest {
  uint32 window_id = 1;
}
message GetAppIdResponse {
  string app_id = 1;
}

message GetTitleRequest {
  uint32 window_id = 1;
}
message GetTitleResponse {
  string title = 1;
}

message GetLocRequest {
  uint32 window_id = 1;
}
message GetLocResponse {
  optional pinnacle.util.v1.Point loc = 1;
}

message GetSizeRequest {
  uint32 window_id = 1;
}
message GetSizeResponse {
  optional pinnacle.util.v1.Size size = 1;
}

message GetFocusedRequest {
  uint32 window_id = 1;
}
message GetFocusedResponse {
  bool focused = 1;
}

enum LayoutMode {
  LAYOUT_MODE_UNSPECIFIED = 0;
  LAYOUT_MODE_TILED = 1;
  LAYOUT_MODE_FLOATING = 2;
  LAYOUT_MODE_FULLSCREEN = 3;
  LAYOUT_MODE_MAXIMIZED = 4;
  LAYOUT_MODE_SPILLED = 5;
}

message GetLayoutModeRequest {
  uint32 window_id = 1;
}
message GetLayoutModeResponse {
  LayoutMode layout_mode = 1;
}

message GetTagIdsRequest {
  uint32 window_id = 1;
}
message GetTagIdsResponse {
  repeated uint32 tag_ids = 1;
}

message GetWindowsInDirRequest {
  uint32 window_id = 1;
  pinnacle.util.v1.Dir dir = 2;
}
message GetWindowsInDirResponse {
  repeated uint32 window_ids = 1;
}

message GetForeignToplevelListIdentifierRequest {
  uint32 window_id = 1;
}
message GetForeignToplevelListIdentifierResponse {
  optional string identifier = 1;
}

/////////

message CloseRequest {
  uint32 window_id = 1;
}

message SetGeometryRequest {
  uint32 window_id = 1;
  optional int32 x = 2;
  optional int32 y = 3;
  optional uint32 w = 4;
  optional uint32 h = 5;
}

message ResizeTileRequest {
  uint32 window_id = 1;
  int32 left = 2;
  int32 right = 3;
  int32 top = 4;
  int32 bottom = 5;
}

message SetFullscreenRequest {
  uint32 window_id = 1;
  pinnacle.util.v1.SetOrToggle set_or_toggle = 2;
}

message SetMaximizedRequest {
  uint32 window_id = 1;
  pinnacle.util.v1.SetOrToggle set_or_toggle = 2;
}

message SetFloatingRequest {
  uint32 window_id = 1;
  pinnacle.util.v1.SetOrToggle set_or_toggle = 2;
}

message SetFocusedRequest {
  uint32 window_id = 1;
  pinnacle.util.v1.SetOrToggle set_or_toggle = 2;
}

enum DecorationMode {
  DECORATION_MODE_UNSPECIFIED = 0;
  DECORATION_MODE_CLIENT_SIDE = 1;
  DECORATION_MODE_SERVER_SIDE = 2;
}

message SetDecorationModeRequest {
  uint32 window_id = 1;
  DecorationMode decoration_mode = 2;
}

message MoveToTagRequest {
  uint32 window_id = 1;
  uint32 tag_id = 2;
}

message SetTagRequest {
  uint32 window_id = 1;
  uint32 tag_id = 2;
  pinnacle.util.v1.SetOrToggle set_or_toggle = 3;
}

message SetTagsRequest {
  uint32 window_id = 1;
  repeated uint32 tag_ids = 2;
}
message SetTagsResponse {}

message VrrDemand {
  bool fullscreen = 1;
}

message SetVrrDemandRequest {
  uint32 window_id = 1;
  optional VrrDemand vrr_demand = 2;
}
message SetVrrDemandResponse {}

message MoveToOutputRequest {
  uint32 window_id = 1;
  string output_name = 2;
}
message MoveToOutputResponse {}

message RaiseRequest {
  uint32 window_id = 1;
}

message LowerRequest {
  uint32 window_id = 1;
}
message LowerResponse {}

message MoveGrabRequest {
  uint32 button = 1;
}

message ResizeGrabRequest {
  uint32 button = 1;
}

message SwapRequest {
  uint32 window_id = 1;
  uint32 target_id = 2;
}
message SwapResponse {}

message WindowRuleRequest {
  message Finished {
    uint32 request_id = 1;
  }

  oneof request {
    Finished finished = 1;
  }
}
message WindowRuleResponse {
  message NewWindowRequest {
    uint32 request_id = 1;
    uint32 window_id = 2;
  }

  oneof response {
    NewWindowRequest new_window = 1;
  }
}

service WindowService {
  rpc Get(GetRequest) returns (GetResponse);

  rpc GetAppId(GetAppIdRequest) returns (GetAppIdResponse);
  rpc GetTitle(GetTitleRequest) returns (GetTitleResponse);
  rpc GetLoc(GetLocRequest) returns (GetLocResponse);
  rpc GetSize(GetSizeRequest) returns (GetSizeResponse);
  rpc GetFocused(GetFocusedRequest) returns (GetFocusedResponse);
  rpc GetLayoutMode(GetLayoutModeRequest) returns (GetLayoutModeResponse);
  rpc GetTagIds(GetTagIdsRequest) returns (GetTagIdsResponse);
  rpc GetWindowsInDir(GetWindowsInDirRequest) returns (GetWindowsInDirResponse);
  rpc GetForeignToplevelListIdentifier(GetForeignToplevelListIdentifierRequest) returns (GetForeignToplevelListIdentifierResponse);

  rpc Close(CloseRequest) returns (google.protobuf.Empty);
  rpc SetGeometry(SetGeometryRequest) returns (google.protobuf.Empty);
  rpc ResizeTile(ResizeTileRequest) returns (google.protobuf.Empty);
  rpc SetFullscreen(SetFullscreenRequest) returns (google.protobuf.Empty);
  rpc SetMaximized(SetMaximizedRequest) returns (google.protobuf.Empty);
  rpc SetFloating(SetFloatingRequest) returns (google.protobuf.Empty);
  rpc SetFocused(SetFocusedRequest) returns (google.protobuf.Empty);
  rpc SetDecorationMode(SetDecorationModeRequest) returns (google.protobuf.Empty);
  rpc MoveToTag(MoveToTagRequest) returns (google.protobuf.Empty);
  rpc SetTag(SetTagRequest) returns (google.protobuf.Empty);
  // Sets the exact tags of this window.
  rpc SetTags(SetTagsRequest) returns (SetTagsResponse);
  rpc SetVrrDemand(SetVrrDemandRequest) returns (SetVrrDemandResponse);
  rpc MoveToOutput(MoveToOutputRequest) returns (MoveToOutputResponse);
  rpc Raise(RaiseRequest) returns (google.protobuf.Empty);
  rpc Lower(LowerRequest) returns (LowerResponse);
  rpc MoveGrab(MoveGrabRequest) returns (google.protobuf.Empty);
  rpc ResizeGrab(ResizeGrabRequest) returns (google.protobuf.Empty);
  rpc Swap(SwapRequest) returns (SwapResponse);

  rpc WindowRule(stream WindowRuleRequest) returns (stream WindowRuleResponse);
}
